# Modul1_Projekt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  utils.py
.github/workflows/: ci.yml  code_check.yml  docker-build.yml  test.yml
app/: __init__.py  api.py  utils.py
kubernetes/: deployment.yaml  namespace.yaml  service.yaml
tests/: test_api.py  test_main.py  test_utils.py
